umol-io/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@marvin_cobalamin.sdf.snap
---
source: umol-io/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  compound_count: 0
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 94, col 31"
molecule_lenient:
  success: false
  compound_count: 0
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 94, col 31"
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C58HBN16O14PR
      atom_count: 92
      bond_count: 103
      extended_atoms: 1
      extended_bonds: 4
      property_count: 4
      rgroup_count: 0
      sgroup_count: 4
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C58HBN16O14PR
      atom_count: 92
      bond_count: 103
      extended_atoms: 1
      extended_bonds: 4
      property_count: 4
      rgroup_count: 0
      sgroup_count: 4
