umol-io/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@nist_1314-35-8-3d.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  compound_count: 0
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 4, col 69"
molecule_lenient:
  success: false
  compound_count: 0
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 4, col 69"
extended_molecule:
  success: false
  compound_count: 0
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 4, col 69"
extended_molecule_lenient:
  success: false
  compound_count: 0
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 4, col 69"
