umol-io/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@nist_80-56-8-3d.sdf.snap
---
source: umol-io/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule_lenient
category: molecule_lenient
molecule:
  success: false
  compound_count: 0
  error:
    error_type: InvalidCountsLine
    message: "Invalid counts line at line 3, col 33"
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C10H16
      atom_count: 26
      bond_count: 27
      property_count: 7
extended_molecule:
  success: false
  compound_count: 0
  error:
    error_type: InvalidCountsLine
    message: "Invalid counts line at line 3, col 33"
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C10H16
      atom_count: 26
      bond_count: 27
      extended_atoms: 0
      extended_bonds: 0
      property_count: 7
      rgroup_count: 0
      sgroup_count: 0
